# microalpha-research

./: .gitignore  README.md  pyproject.toml
app/: common.py  demo_dashboard.py
app/pages/: 1_Phase_1_Execution.py  2_Phase_3_Real_Alpha.py  3_Phase_4_Robustness.py  4_Methods_And_Limitations.py  5_Phase_2_Appendix.py
data/: README_DATA.md
docs/: 02_resume_bullets.md  03_recruiter_message.md  04_interview_talk_track.md  alpha_phase3_method.md  alpha_phase3_pitch.md  alpha_phase4_method.md  alpha_phase4_pitch.md  alpha_research_method.md  alpha_research_pitch.md  hedge_fund_pitch.md  method_note.md
reports/: alpha_phase2_metadata.json  alpha_phase2_summary.csv  alpha_phase2_summary.md  alpha_phase3_daily_summary.csv  alpha_phase3_heldout_summary.csv  alpha_phase3_metadata.json  alpha_phase3_summary.csv  alpha_phase3_summary.md  alpha_phase3_walkforward_schedule.csv  alpha_phase4_asset_summary.csv  alpha_phase4_episode_summary.csv  alpha_phase4_external_summary.csv  alpha_phase4_metadata.json  alpha_phase4_schedule.csv  alpha_phase4_summary.csv  alpha_phase4_summary.md  benchmark_summary.md  malp_model.json  real_summary.csv  run_metadata.json  synthetic_summary.csv
scripts/: build_phase4_episode_summary.py  run_alpha_research_phase2.py  run_alpha_research_phase3.py  run_alpha_research_phase4.py  run_benchmark.py
src/microalpha_exec_lab/: __init__.py  alpha_cross_asset_benchmark.py  alpha_cross_asset_models.py  alpha_real_benchmark.py  alpha_real_models.py  benchmark.py  data.py  model.py  multi_asset_data.py  policy.py  synthetic.py
(+25 files in other folders)
