[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "microalpha-research"
version = "0.3.0"
description = "Research platform for market microstructure, execution-aware benchmarking, and short-horizon alpha experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Yadang Alexis Rouzoumka"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyarrow>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/microalpha_exec_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"
